--- a/hparams/hparams.yaml
+++ b/hparams/hparams.yaml
@@ -4,8 +4,8 @@ voxceleb_large_1s:
     duration: 1
   train:
     batch_size: 128
-    data_path: '/data/public/rw/voxceleb_norm'
-    meta_path: '/data/public/rw/voxceleb/speaker_list.csv'
+    data_path: '../data/voxceleb1/voxceleb1_wav'
+    meta_path: None
     num_gpu: 2
     lr: 0.0001
   eval:
